# mox-raffle

./: README.md  moccasin.toml  pyproject.toml
script/: deploy.py  interactions_vrf.py
script/mock/: deploy_vrf_coordinator.py
src/: raffle.vy
src/interfaces/: VRFCoordinatorV2_5.vyi
src/mocks/: mock_raffle_pick_winner.vy
src/mocks/chainlink/: mock_vrf_coordinator_v2_5.vy
tests/: conftest.py
tests/integration/: test_raffle_integration.py
tests/unit/: conftest.py  test_raffle.py
