[project]
name = "moccasin_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "moccasin>=0.3.6",
]

# Moccasin config
[tool.moccasin.project]
src = "src"
out = "out"
dot_env = ".env"

## Networks
[tool.moccasin.networks.pyevm]
is_zksync = false

[tool.moccasin.networks.anvil]
url = "http://127.0.0.1:8545"
prompt_live = false
save_to_db = false
chain_id = 31337

[tool.moccasin.networks.sepolia]
url = "https://ethereum-sepolia-rpc.publicnode.com"
chain_id = 11155111

[tool.moccasin.networks.zksync-sepolia]
url = "https://sepolia.era.zksync.dev"
chain_id = 300
is_zksync = true
prompt_live = true
